force-app/main/default/objects/QuoteLineItem/fields/Discount_Item__c.field-meta.xml
<CustomField>
    <fullName>Discount_Item__c</fullName>
    <label>Discount Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10% Discount</fullName>
            </value>
            <value>
                <fullName>15% Discount</fullName>
            </value>
            <value>
                <fullName>20% Discount</fullName>
            </value>
            <value>
                <fullName>5% Discount</fullName>
            </value>
            <value>
                <fullName>Discount - Custom%</fullName>
            </value>
            <value>
                <fullName>Discount - Custom%-O</fullName>
            </value>
            <value>
                <fullName>Partner Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>