force-app/main/default/objects/QuoteLineItem/fields/Emirate__c.field-meta.xml
<CustomField>
    <fullName>Emirate__c</fullName>
    <label>Emirate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Umm Al-Quwain</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>