force-app/main/default/objects/QuoteLineItem/fields/EU_Triangulation__c.field-meta.xml
<CustomField>
    <fullName>EU_Triangulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Triangulation</label>
    <type>Checkbox</type>
</CustomField>