force-app/main/default/objects/QuoteLineItem/fields/Exclude_Item_from_Rate_Request__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Item_from_Rate_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Item from Rate Request</label>
    <type>Checkbox</type>
</CustomField>