force-app/main/default/objects/QuoteLineItem/fields/Exp_Close__c.field-meta.xml
<CustomField>
    <fullName>Exp_Close__c</fullName>
    <label>Exp. Close</label>
    <type>Date</type>
</CustomField>