force-app/main/default/objects/QuoteLineItem/fields/Installation_Service__c.field-meta.xml
<CustomField>
    <fullName>Installation_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Service?</label>
    <type>Checkbox</type>
</CustomField>