force-app/main/default/objects/QuoteLineItem/fields/Is_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Created</label>
    <type>Checkbox</type>
</CustomField>