force-app/main/default/objects/QuoteLineItem/fields/Length_m__c.field-meta.xml
<CustomField>
    <fullName>Length_m__c</fullName>
    <label>Length (m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>