force-app/main/default/objects/QuoteLineItem/fields/Old_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Line_Amount__c</fullName>
    <label>Old Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>