force-app/main/default/objects/QuoteLineItem/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>