force-app/main/default/objects/QuoteLineItem/fields/Recalclated_QTY_SqM__c.field-meta.xml
<CustomField>
    <fullName>Recalclated_QTY_SqM__c</fullName>
    <label>Recalclated QTY (SqM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>