force-app/main/default/objects/QuoteLineItem/fields/Statistical_Procedure_for_Sales__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Procedure_for_Sales__c</fullName>
    <label>Statistical Procedure for Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00 - Regular import (ICV) and export (ICL)</fullName>
            </value>
            <value>
                <fullName>02 - Re-export or dispatch of unprocessed goods, in domestice ownership.</fullName>
            </value>
            <value>
                <fullName>03.b - Dispatch (ICL) of unprocessed goods which have been cleared or arrived in the Netherlands, which are intended for another EU member state. (sale)</fullName>
            </value>
            <value>
                <fullName>04 - Arrival/dispatch before stock movements (sales and purchases)</fullName>
            </value>
            <value>
                <fullName>05 - Arrival/dispatch after stock movements (sales and purchases)</fullName>
            </value>
            <value>
                <fullName>10000 - Final dispatch</fullName>
            </value>
            <value>
                <fullName>17 - Simplified ABC-transaction</fullName>
            </value>
            <value>
                <fullName>18 - Delivery not to ICT-list</fullName>
            </value>
            <value>
                <fullName>19 - Delivery to ICT-list, not to CBS</fullName>
            </value>
            <value>
                <fullName>22002 - Temporary dispatch for processing</fullName>
            </value>
            <value>
                <fullName>31514 - Re-dispatch after processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>