force-app/main/default/objects/QuoteLineItem/fields/Statistical_Value__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Value__c</fullName>
    <label>Statistical Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>