force-app/main/default/objects/QuoteLineItem/fields/Supply_Type__c.field-meta.xml
<CustomField>
    <fullName>Supply_Type__c</fullName>
    <label>Supply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply &amp; Installation</fullName>
            </value>
            <value>
                <fullName>Supply Only</fullName>
            </value>
            <value>
                <fullName>Supply With Delivery</fullName>
            </value>
            <value>
                <fullName>Installation Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>