force-app/main/default/objects/QuoteLineItem/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>10% Advance, 90% LC -(60 Days)</fullName>
            </value>
            <value>
                <fullName>10% Advance, 90% Prior to Del.</fullName>
            </value>
            <value>
                <fullName>100% Advance</fullName>
            </value>
            <value>
                <fullName>100% On B/L</fullName>
            </value>
            <value>
                <fullName>100% On Order Confirmation</fullName>
            </value>
            <value>
                <fullName>2% 10 Net 30</fullName>
            </value>
            <value>
                <fullName>20% Advance, 80% LC -(60 Days)</fullName>
            </value>
            <value>
                <fullName>25% Adv &amp; 75% Prior Delivery</fullName>
            </value>
            <value>
                <fullName>30 Days From Invoice</fullName>
            </value>
            <value>
                <fullName>30 Days from Order Confirmation</fullName>
            </value>
            <value>
                <fullName>30 Days Net Invoice</fullName>
            </value>
            <value>
                <fullName>30% Adv &amp; 70% Prior Delivery</fullName>
            </value>
            <value>
                <fullName>30% Adv - 70% On Bol</fullName>
            </value>
            <value>
                <fullName>30% Adv 40% A/F Del 30% on Com</fullName>
            </value>
            <value>
                <fullName>30% Advance, 70% LC -(60 Days)</fullName>
            </value>
            <value>
                <fullName>40% Adv - 60% On Bol</fullName>
            </value>
            <value>
                <fullName>40% Adv 40% B/F Del 20% on Com</fullName>
            </value>
            <value>
                <fullName>50 Ad,20 on MT,20 Prog,10% A/W</fullName>
            </value>
            <value>
                <fullName>50% ADV - 50% On BOL</fullName>
            </value>
            <value>
                <fullName>50% Adv - 50% On Completion</fullName>
            </value>
            <value>
                <fullName>50% ADV - 50% On DEL</fullName>
            </value>
            <value>
                <fullName>50% ADV, 25% progress, 25% Comp</fullName>
            </value>
            <value>
                <fullName>50% Adv, 45% B/F Del, 5% on Com</fullName>
            </value>
            <value>
                <fullName>50% Adv, 50% 10Day PDC Af. Inst</fullName>
            </value>
            <value>
                <fullName>50% Adv,40% B/F Del, 10% on Com</fullName>
            </value>
            <value>
                <fullName>50% adv. &amp; 50% prior delivery</fullName>
            </value>
            <value>
                <fullName>50% Adv. 30% on Del, 20% on Com</fullName>
            </value>
            <value>
                <fullName>50%M.ADV,50%M.B/F Del,100% Comp</fullName>
            </value>
            <value>
                <fullName>60 Days from Order Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>